Update HackathonService.java