@@ -8,11 +8,10 @@ import com.hackhub.repository.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
 import java.time.LocalDateTime;
 import java.util.*;
-
-import com.hackhub.pattern.observer.HackathonObservable;
-import org.springframework.transaction.annotation.Transactional;
 
 @Service
 public class HackathonService {
@@ -24,96 +23,88 @@ public class HackathonService {
     private UserRepository userRepository;
 
     @Autowired
-    private HackathonObservable hackathonObservable;
+    private NotificationService notificationService;
 
+    /**
+     * Crea un nuovo hackathon, metodo unificato con premio opzionale
+     */
     public Hackathon createHackathon(String name, String description, String rules,
                                      LocalDateTime regDeadline, LocalDateTime startDate,
-                                     LocalDateTime endDate, Integer maxTeamSize, Long organizerId) {
+                                     LocalDateTime endDate, Integer maxTeamSize,
+                                     Long organizerId, Double prizeMoney) {
+
+        validateHackathonDates(regDeadline, startDate, endDate);
+        validateMaxTeamSize(maxTeamSize);
 
         User organizer = userRepository.findById(organizerId)
                 .orElseThrow(() -> new RuntimeException("Organizzatore non trovato"));
 
         if (!"ORGANIZER".equals(organizer.getRole())) {
-            throw new RuntimeException("L'utente non è un organizzatore");
+            throw new RuntimeException("Solo un organizzatore può creare hackathon");
         }
 
         Hackathon hackathon = new Hackathon(name, description, rules, regDeadline,
-                startDate, endDate, maxTeamSize, organizer);
+                startDate, endDate, maxTeamSize, organizer,
+                prizeMoney != null ? prizeMoney : 0.0);
 
         return hackathonRepository.save(hackathon);
     }
 
-    public Hackathon createHackathonWithBuilder(String name, String description, String rules, LocalDateTime regDeadline, LocalDateTime startDate, LocalDateTime endDate, Integer maxTeamSize, Long organizerId, Long judgeId, List<Long> mentorIds) {
-        // Validazioni
-        if (name == null || name.trim().isEmpty()) {
-            throw new IllegalArgumentException("Il nome dell'hackathon è obbligatorio");
+    /**
+     * Aggiorna lo stato e notifica i partecipanti
+     */
+    @Transactional
+    public Hackathon updateStatus(Long hackathonId, String newStatus) {
+        Hackathon hackathon = getHackathonById(hackathonId);
+
+        if (!isValidStatus(newStatus)) {
+            throw new RuntimeException("Stato non valido. Valori ammessi: " +
+                    Arrays.toString(getValidStatuses()));
         }
 
-        if (regDeadline.isAfter(startDate)) {
-            throw new IllegalArgumentException("La scadenza iscrizioni deve essere prima dell'inizio");
-        }
+        String oldStatus = hackathon.getStatus();
+        hackathon.setStatus(newStatus);
 
-        if (startDate.isAfter(endDate)) {
-            throw new IllegalArgumentException("La data di inizio deve essere prima della fine");
-        }
-
-        if (maxTeamSize < 1 || maxTeamSize > 10) {
-            throw new IllegalArgumentException("La dimensione del team deve essere tra 1 e 10");
-        }
-
-        // Recupera organizzatore
-        User organizer = userRepository.findById(organizerId)
-                .orElseThrow(() -> new RuntimeException("Organizzatore non trovato"));
-
-        if (!"ORGANIZER".equals(organizer.getRole())) {
-            throw new RuntimeException("L'utente non è un organizzatore");
-        }
-
-        // Crea hackathon base
-        Hackathon hackathon = new Hackathon(name, description, rules, regDeadline,
-                startDate, endDate, maxTeamSize, organizer);
-
-        // Assegna giudice se presente
-        if (judgeId != null) {
-            User judge = userRepository.findById(judgeId)
-                    .orElseThrow(() -> new RuntimeException("Giudice non trovato"));
-
-            if (!"JUDGE".equals(judge.getRole())) {
-                throw new RuntimeException("L'utente non è un giudice");
-            }
-            hackathon.setJudge(judge);
-        }
-
-        // Assegna mentori se presenti
-        if (mentorIds != null && !mentorIds.isEmpty()) {
-            for (Long mentorId : mentorIds) {
-                User mentor = userRepository.findById(mentorId)
-                        .orElseThrow(() -> new RuntimeException("Mentor non trovato"));
-
-                if (!"MENTOR".equals(mentor.getRole())) {
-                    throw new RuntimeException("L'utente " + mentor.getUsername() + " non è un mentor");
-                }
-
-                if (!hackathon.getMentors().contains(mentor)) {
-                    hackathon.getMentors().add(mentor);
-                }
-            }
-        }
-
-        // Salva e notifica
         Hackathon saved = hackathonRepository.save(hackathon);
 
-        // Notifica gli observer
-        hackathonObservable.notifyJudgeAssigned(saved);
+        notificationService.notifyHackathonStatusChange(saved, oldStatus, newStatus);
 
-        System.out.println("Hackathon '" + name + "' creato con builder pattern");
+        // Se l'hackathon è concluso viene determinato e notificato il vincitore
+        if ("CONCLUSO".equals(newStatus)) {
+            determineAndNotifyWinner(hackathon);
+        }
+
         return saved;
     }
 
-    public Hackathon assignJudge(Long hackathonId, Long judgeId) {
-        Hackathon hackathon = hackathonRepository.findById(hackathonId)
-                .orElseThrow(() -> new RuntimeException("Hackathon non trovato"));
+    /**
+     * Determina il vincitore in base al punteggio più alto
+     */
+    private void determineAndNotifyWinner(Hackathon hackathon) {
+        if (hackathon.getTeams() == null || hackathon.getTeams().isEmpty()) {
+            return;
+        }
 
+        Team winner = hackathon.getTeams().stream()
+                .filter(Team::isEvaluated)
+                .max(Comparator.comparing(Team::getScore))
+                .orElse(null);
+
+        if (winner != null) {
+            hackathon.setWinnerTeamId(winner.getId());
+            hackathonRepository.save(hackathon);
+
+            //viene notificato il team vincitore
+            notificationService.notifyWinner(winner, hackathon, hackathon.getPrizeMoney());
+        }
+    }
+
+    /**
+     * Assegna un giudice all'hackathon
+     */
+    @Transactional
+    public Hackathon assignJudge(Long hackathonId, Long judgeId) {
+        Hackathon hackathon = getHackathonById(hackathonId);
         User judge = userRepository.findById(judgeId)
                 .orElseThrow(() -> new RuntimeException("Giudice non trovato"));
 
@@ -124,63 +115,43 @@ public class HackathonService {
         hackathon.setJudge(judge);
         Hackathon saved = hackathonRepository.save(hackathon);
 
-        // Notifica gli observer
-        hackathonObservable.notifyJudgeAssigned(saved);
+        //notifica il giudice
+        notificationService.sendEmail(judge.getEmail(),
+                "Sei stato assegnato come giudice",
+                "Sei stato assegnato come giudice per l'hackathon: " + hackathon.getName());
 
         return saved;
     }
 
-    public Hackathon updateStatus(Long hackathonId, String newStatus) {
-        Hackathon hackathon = hackathonRepository.findById(hackathonId)
-                .orElseThrow(() -> new RuntimeException("Hackathon non trovato"));
-
-        String oldStatus = hackathon.getStatus();
-
-        if (!isValidStatus(newStatus)) {
-            throw new RuntimeException("Stato non valido");
+    private void validateHackathonDates(LocalDateTime regDeadline, LocalDateTime startDate, LocalDateTime endDate) {
+        if (regDeadline == null || startDate == null || endDate == null) {
+            throw new IllegalArgumentException("Tutte le date sono obbligatorie");
         }
-
-        hackathon.setStatus(newStatus);
-        Hackathon saved = hackathonRepository.save(hackathon);
-
-        // Notifica gli observer
-        hackathonObservable.notifyStatusChange(saved, oldStatus, newStatus);
-
-        // Se concluso, determina vincitore
-        if ("CONCLUSO".equals(newStatus)) {
-            determineWinner(hackathon);
+        if (regDeadline.isAfter(startDate)) {
+            throw new IllegalArgumentException("La scadenza iscrizioni deve essere prima dell'inizio");
         }
+        if (startDate.isAfter(endDate)) {
+            throw new IllegalArgumentException("La data di inizio deve essere prima della fine");
+        }
+    }
 
-        return saved;
+    private void validateMaxTeamSize(Integer maxTeamSize) {
+        if (maxTeamSize == null || maxTeamSize < 1 || maxTeamSize > 10) {
+            throw new IllegalArgumentException("La dimensione del team deve essere tra 1 e 10");
+        }
     }
 
     private boolean isValidStatus(String status) {
-        return List.of("INSCRIZIONE", "IN_CORSO", "IN_VALUTAZIONE", "CONCLUSO")
-                .contains(status);
+        return Arrays.asList("INSCRIZIONE", "IN_CORSO", "IN_VALUTAZIONE", "CONCLUSO").contains(status);
     }
 
-    private void determineWinner(Hackathon hackathon) {
-        List<Team> teams = hackathon.getTeams();
+    private String[] getValidStatuses() {
+        return new String[]{"INSCRIZIONE", "IN_CORSO", "IN_VALUTAZIONE", "CONCLUSO"};
+    }
 
-        if (teams.isEmpty()) {
-            return;
-        }
-
-        // Trova il team con il punteggio più alto
-        Team winner = null;
-        Double maxScore = -1.0;
-
-        for (Team team : teams) {
-            if (team.getScore() != null && team.getScore() > maxScore) {
-                maxScore = team.getScore();
-                winner = team;
-            }
-        }
-
-        if (winner != null) {
-            hackathon.setWinnerTeamId(winner.getId());
-            System.out.println("Vincitore: " + winner.getName() + " con punteggio: " + maxScore);
-        }
+    public Hackathon getHackathonById(Long id) {
+        return hackathonRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Hackathon non trovato con ID: " + id));
     }
 
     public List<Hackathon> getAllHackathons() {
@@ -193,23 +164,6 @@ public class HackathonService {
 
     public List<Hackathon> getHackathonsByOrganizer(Long organizerId) {
         return hackathonRepository.findByOrganizerId(organizerId);
-    }
-
-    public Hackathon declareWinner(Long hackathonId, Long teamId) {
-        Hackathon hackathon = hackathonRepository.findById(hackathonId)
-                .orElseThrow(() -> new RuntimeException("Hackathon non trovato"));
-
-        if (!"CONCLUSO".equals(hackathon.getStatus())) {
-            throw new RuntimeException("L'hackathon non è concluso");
-        }
-
-        hackathon.setWinnerTeamId(teamId);
-        Hackathon saved = hackathonRepository.save(hackathon);
-
-        // Notifica gli observer
-        hackathonObservable.notifyWinnerDeclared(saved, teamId);
-
-        return saved;
     }
 
     public Hackathon addMentor(Long hackathonId, Long mentorId) {
@@ -247,58 +201,41 @@ public class HackathonService {
         return hackathon.getMentors();
     }
 
-    //Aggiorna automaticamente lo stato in base alle date
-    @Scheduled(fixedRate = 3600000) // Ogni ora
+    /**
+     * Aggiorna automaticamente lo stato in base alle date
+     */
+    @Scheduled(fixedRate = 3600000)
     @Transactional
-    public void updateHackathonStatuses() {
-        List<Hackathon> hackathons = hackathonRepository.findAll();
+    public void autoUpdateStatuses() {
+        List<Hackathon> hackathons = getAllHackathons();
         LocalDateTime now = LocalDateTime.now();
 
-        for (Hackathon hackathon : hackathons) {
-            String oldStatus = hackathon.getStatus();
+        for (Hackathon h : hackathons) {
             String newStatus = null;
 
-            switch (hackathon.getStatus()) {
+            switch (h.getStatus()) {
                 case "INSCRIZIONE":
-                    if (now.isAfter(hackathon.getRegistrationDeadline())) {
-                        newStatus = "IN_CORSO";
-                    }
+                    if (now.isAfter(h.getRegistrationDeadline())) newStatus = "IN_CORSO";
                     break;
-
                 case "IN_CORSO":
-                    if (now.isAfter(hackathon.getEndDate())) {
-                        newStatus = "IN_VALUTAZIONE";
-                    }
+                    if (now.isAfter(h.getEndDate())) newStatus = "IN_VALUTAZIONE";
                     break;
-
                 case "IN_VALUTAZIONE":
-                    // Controlla se tutte le sottomissioni sono state valutate
-                    boolean allEvaluated = true;
-                    for (Team team : hackathon.getTeams()) {
-                        if (team.hasSubmittedProject() && !team.isEvaluated()) {
-                            allEvaluated = false;
-                            break;
-                        }
-                    }
-
-                    if (allEvaluated && !hackathon.getTeams().isEmpty()) {
-                        newStatus = "CONCLUSO";
-                        determineWinner(hackathon);
-                    }
+                    boolean allEvaluated = h.getTeams().stream()
+                            .filter(Team::hasSubmittedProject)
+                            .allMatch(Team::isEvaluated);
+                    if (allEvaluated && !h.getTeams().isEmpty()) newStatus = "CONCLUSO";
                     break;
             }
 
-            if (newStatus != null && !newStatus.equals(oldStatus)) {
-                hackathon.setStatus(newStatus);
-                hackathonRepository.save(hackathon);
-                hackathonObservable.notifyStatusChange(hackathon, oldStatus, newStatus);
-                System.out.println("Hackathon '" + hackathon.getName() + "' passato a: " + newStatus);
+            if (newStatus != null) {
+                updateStatus(h.getId(), newStatus);
             }
         }
     }
 
     /**
-     * Ottiene statistiche complete per un hackathon
+     * Ottiene le statistiche complete per un hackathon
      */
     public Map<String, Object> getHackathonStatistics(Long hackathonId) {
         Hackathon hackathon = hackathonRepository.findById(hackathonId)
@@ -306,12 +243,10 @@ public class HackathonService {
 
         Map<String, Object> stats = new HashMap<>();
 
-        // Statistiche base
         stats.put("name", hackathon.getName());
         stats.put("status", hackathon.getStatus());
         stats.put("totalTeams", hackathon.getTeams().size());
 
-        // Statistiche team
         int teamsWithSubmission = 0;
         int teamsEvaluated = 0;
         double totalScore = 0;
@@ -334,10 +269,8 @@ public class HackathonService {
         stats.put("maxScore", scores.stream().max(Double::compare).orElse(0.0));
         stats.put("minScore", scores.stream().min(Double::compare).orElse(0.0));
 
-        // Statistiche mentori
         stats.put("totalMentors", hackathon.getMentors().size());
 
-        // Vincitore
         if (hackathon.getWinnerTeamId() != null) {
             Optional<Team> winner = hackathon.getTeams().stream()
                     .filter(t -> t.getId().equals(hackathon.getWinnerTeamId()))
@@ -352,29 +285,27 @@ public class HackathonService {
         return stats;
     }
 
-    //Verifica se un utente può accedere a un hackathon
+    /**
+     * Verifica se un utente può accedere a un hackathon
+     */
     public boolean canAccessHackathon(Long hackathonId, Long userId, String userRole) {
         Hackathon hackathon = hackathonRepository.findById(hackathonId)
                 .orElseThrow(() -> new RuntimeException("Hackathon non trovato"));
 
-        // Organizzatore può sempre accedere
         if (hackathon.getOrganizer().getId().equals(userId)) {
             return true;
         }
 
-        // Giudice può accedere se assegnato
         if ("JUDGE".equals(userRole) && hackathon.getJudge() != null
                 && hackathon.getJudge().getId().equals(userId)) {
             return true;
         }
 
-        // Mentore può accedere se nella lista
         if ("MENTOR".equals(userRole)) {
             return hackathon.getMentors().stream()
                     .anyMatch(m -> m.getId().equals(userId));
         }
 
-        // Utente normale può accedere se partecipa
         if ("USER".equals(userRole)) {
             return hackathon.getTeams().stream()
                     .flatMap(t -> t.getMembers().stream())
@@ -382,10 +313,5 @@ public class HackathonService {
         }
 
         return false;
-    }
-
-    public Hackathon getHackathonById(Long id) {
-        return hackathonRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Hackathon non trovato con ID: " + id));
     }
 }
